<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="30dp"
    tools:context=".view.RegisterActivity">

    <TextView
        android:id="@+id/txtRegist"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txt_register"
        android:layout_centerHorizontal="true"
        android:textSize="30sp"/>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldReg"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/txtRegist"
        android:hint="@string/masukkan_nama"
        android:layout_marginTop="50dp"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etNameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldRegDua"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFieldReg"
        android:hint="@string/masukkan_username2"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etUnameReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldRegTiga"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFieldRegDua"
        android:hint="@string/masukkan_password2"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etPassReg"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textFieldRegEmpat"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFieldRegTiga"
        android:hint="@string/ulang_password"
        app:endIconMode="password_toggle"
        android:layout_marginBottom="15dp">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/etRepass"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/btnReg"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/textFieldRegEmpat"
        android:layout_marginTop="40dp"
        android:text="@string/register"
        android:layout_centerHorizontal="true" />

</RelativeLayout>